--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "retell-sdk": "^4.9.0",
     "stream-browserify": "^3.0.0",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "twitter-api-v2": "^1.18.2"
   },
   "devDependencies": {
     "@types/node": "^20",
