--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^18.2.0",
     "retell-client-js-sdk": "^2.0.4",
     "retell-sdk": "^4.9.0",
+    "sonner": "^1.7.0",
     "stream-browserify": "^3.0.0",
     "stripe": "^17.4.0",
     "tailwind-merge": "^2.5.4",
