intro video screen

--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.46.1",
-    "apify": "^3.2.6",
     "@vercel/analytics": "^1.4.1",
+    "@vimeo/player": "^2.25.0",
+    "apify": "^3.2.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "crypto-browserify": "^3.12.0",
