--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "oauth-1.0a": "^2.2.6",
     "openai": "^4.73.0",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "retell-client-js-sdk": "^2.0.4",
     "retell-sdk": "^4.9.0",
