--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vercel/analytics": "^1.4.1",
     "@vimeo/player": "^2.25.0",
     "apify": "^3.2.6",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "crypto-browserify": "^3.12.0",
